# Fixmydata

./: .gitignore  Fixmydata_demo.ipynb  Fixmydata_demo.md  README.md  demo_with_errors.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml  setup-checkpoint.py
Fixmydata/: cleaning.py  data_validator.py  outlier_detector.py
Fixmydata/.ipynb_checkpoints/: __init__-checkpoint.py  cleaning-checkpoint.py
bading_test/: test_fixmydata.py  test_fixmydata_datasets.py
docs/: data_cleaning_tutorial_results.md  fixmydata_presentation.md
examples/: Untitled.ipynb  demo.ipynb
fixmydata.egg-info/: PKG-INFO
src/fixmydata/: cleaning.py
test/: Untitled.ipynb  data_cleaning_tutorial.ipynb  presentation.ipynb  test for datasets.ipynb
tests/: conftest.py  test_cleaning.py  test_cleaning_and_validation.py  test_outlier_detector.py  test_validator.py
