[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixmydata"
version = "0.1.0"
description = "A Python library for data cleaning and preprocessing"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Johann Lloyd Megalbio", email = "megalbio.johann@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = ["pytest>=6.2.5"]

[project.urls]
Homepage = "https://github.com/DirtCrew53/Fixmydata"
Repository = "https://github.com/DirtCrew53/Fixmydata"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
