[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["Fixmydata"]
include_package_data = true

[tool.setuptools.packages.find]
where = ["src"]

[metadata]
name = "Fixmydata" 
version = "3.11"
description = "Fixmydata is a lightweight helper library built on top of pandas for cleaning, validating, and inspecting tabular datasets."
long_description = "file: README.md"  
long_description_content_type = "text/markdown"  
author = "Johann Lloyd Megalbio"
author_email = "megalbio.johann@gmail.com"
url = "https://github.com/DirtCrew53/Fixmydata"  

[options]
packages = find:
install_requires = [
    "pandas",  
    "numpy"
]

[options.package_data]
* = ["*.txt", "*.rst", "*.md"] 
